--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- import JavaScript -->
-  <script defer src="script.js"></script>
 
   <!-- import CSS -->
   <link rel="stylesheet" href="styles.css">
@@ -22,7 +20,10 @@
 
   <!-- container for all players -->
   <div id="all-players-container"></div>
+  <div id="player-details-container"></div>
 
+  <!-- import JavaScript -->
+  <script src="script.js"></script>
 </body>
 
 </html>
